# quokkagit

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake-ubuntu-build.yml
resources/: QTDark.stylesheet  org.ballessay.quokkagit.desktop  org.ballessay.turtlegit.desktop  resources.qrc  turtlegit.appdata.xml
scripts/: build.sh
src/: application.cpp  application.h  blamedialog.cpp  blamedialog.h  branchselectiondialog.cpp  branchselectiondialog.ui  debuglogdialog.cpp  debuglogdialog.h  debuglogdialog.ui  git2wrapper.cpp  git2wrapper.h  logcolumnvisibilitymenu.cpp  logcontextmenu.cpp  logcontextmenu.h  logentry.cpp  logentry.h  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h.in
src/data/: blamedata.h  diffentry.h  helpers.cpp  helpers.h  logentry.cpp  logentry.h  settings.cpp  settings.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  blamedialog.cpp  blamedialog.h  blamedialog.ui  branchselectiondialog.cpp  branchselectiondialog.h  branchselectiondialog.ui  debuglogdialog.cpp  debuglogdialog.h  debuglogdialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/menus/: logcolumnvisibilitymenu.cpp  logcolumnvisibilitymenu.h  logcontextmenu.cpp  logcontextmenu.h
src/models/: blamemodel.cpp  blamemodel.h  filelogmodel.cpp  filelogmodel.h  filelogproxymodel.cpp  filelogproxymodel.h  logfilterproxymodel.cpp  logfilterproxymodel.h  logmodel.cpp  logmodel.h
src/tools/: difftool.cpp  difftool.h  git2wrapper.cpp  git2wrapper.h  kdiff3.cpp  kdiff3.h
src/widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui  tablewidget.cpp  tablewidget.h
